pom test simplifications & security updates